@@ -376,9 +376,14 @@ public abstract class JEditActionSet<E extends JEditAbstractEditAction> implemen
 		{
 			Log.log(Log.DEBUG,this,"Loading actions from " + uri);
 			ActionListHandler ah = new ActionListHandler(uri.toString(),this);
-			InputStream in = uri.openStream();
-			if(in == null)
+			InputStream in;
+			try
 			{
+				in = uri.openStream();
+			}
+			catch(FileNotFoundException e)
+			{
+				in = null;
 				// this happened when calling generateCache() in the context of 'find orphan jars'
 				// in org.gjt.sp.jedit.pluginmgr.ManagePanel.FindOrphan.actionPerformed(ActionEvent)
 				// because for not loaded plugins, the plugin will not be added to the list of pluginJars
@@ -387,7 +392,7 @@ public abstract class JEditActionSet<E extends JEditAbstractEditAction> implemen
 				// Better log a small error message than a big stack trace
 				Log.log(Log.WARNING, this, "Unable to open: " + uri);
 			}
-			else if ( XMLUtilities.parseXML(in, ah))
+			if (in != null && XMLUtilities.parseXML(in, ah))
 			{
 				Log.log(Log.ERROR, this, "Unable to parse: " + uri);
 			}
